[package]
name = "firehose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
serde_cbor = "*"
serde_with = "*"
tungstenite = {version = "0.16.0", features = ["native-tls"]}
url = "2.2.2"

